# pydantic-cache

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
pydantic_cache/: __init__.py  backend.py  decorator.py
pydantic_cache/backend/: __init__.py  base.py  disk.py  redis.py
tasks/: __init__.py  changelog_check.py  helpers.py  lint.py  publish.py  test.py  typecheck.py  verify.py
tests/: test_decorator.py  test_version.py
tests/backend/: test_redis.py
